# YCSB-C

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  parse_result.py  run_ycsbc.sh  ycsbc.cc
conf/: client_config.conf  dpdk.conf  server_ips.conf  veths_config.conf
core/: client.h  core_workload.cc  core_workload.h  db.h  properties.h  timer.h  utils.h
db/: basic_db.h  cache_migrate_per_core.cc  cache_migrate_per_core.h  cache_migration.cc  cache_migration.h  cache_migration_dpdk.cc  cache_migration_dpdk.cc.bak  cache_migration_dpdk.h  db_factory.cc  db_factory.h  hot_statistics.h
lib/: c_m_proto.h  consistent_hash.cc  consistent_hash.h  request_map.h
utils/: c_m_proto.h  cache_migration_socket.cc  cache_migration_socket.h  consistent_hash.cc  consistent_hash.h  hot_kvs_file_gen.py  ip_conf_gen.py
workloads/: workloada.spec  workloadb.spec  workloadc.spec  workloade.spec  workloadf.spec
